<resources>
    <string name="app_name">Road Runners</string>
    <string name="screen_title">Road Runners</string>
    <string name="create_event">Create New Event</string>
    <string name="event_list_label">Ongoing Events</string>
    <string name="event_detail_name_label">Event Name: </string>
    <string name="event_detail_location_label">Event Location: </string>
    <string name="event_detail_distance_label">Distance (KM) : </string>
    <string name="event_detail_date_label">Event Date :</string>
    <string name="event_detail_time_label">Event Time :</string>
    <string name="event_detail_organizer_label">Event Organizer :</string>
    <string name="event_detail_participants_label">Participants :</string>
    <string name="event_create_action_button">ACTION</string>
    <string name="event_detail_join_button">Join</string>
    <string name="event_detail_back_button">Back</string>
    <string name="event_detail_delete_button">Delete Event</string>
    <string name="event_detail_participants_placeholder_text">Placeholder for List.</string>
    <string name="event_detail_date_input_text">Select Date!</string>
    <string name="event_detail_time_input_text">Select Time!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
