<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail_back_button"
            android:id="@+id/event_create_back_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_create_action_button"
            android:id="@+id/event_create_action_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_create_name_input_layout"
            android:layout_below="@id/event_create_action_button">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/event_detail_name_label"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_create_location_input_layout"
            android:layout_below="@id/event_create_name_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/event_detail_location_label"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_create_distance_input_layout"
            android:layout_below="@id/event_create_location_input_layout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/event_detail_distance_label"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail_date_label"
            android:id="@+id/event_create_date_label"
            android:layout_below="@id/event_create_distance_input_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_detail_time_label"
            android:id="@+id/event_create_time_label"
            android:layout_below="@id/event_create_date_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_create_date_input"
            android:layout_toRightOf="@+id/event_create_time_label"
            android:layout_alignBaseline="@id/event_create_date_label"
            android:text="@string/event_detail_date_input_text"
            android:clickable="true"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_create_time_input"
            android:layout_toRightOf="@+id/event_create_time_label"
            android:layout_alignBaseline="@id/event_create_time_label"
            android:clickable="true"
            android:text="@string/event_detail_time_input_text"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_create_organizer_layout"
            android:layout_below="@id/event_create_time_label">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/event_detail_organizer_label"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</ScrollView>