<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_back_button"
        android:id="@+id/event_detail_back_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_create_action_button"
        android:id="@+id/event_detail_action_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_name_label"
        android:id="@+id/event_detail_name_label"
        android:layout_below="@id/event_detail_back_button"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_name_display"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_alignBaseline="@id/event_detail_name_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_location_label"
        android:id="@+id/event_detail_location_label"
        android:layout_below="@id/event_detail_name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_location_display"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_location_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_distance_label"
        android:id="@+id/event_detail_distance_label"
        android:layout_below="@id/event_detail_location_label"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_distance_display"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_distance_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_organizer_label"
        android:id="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_distance_label"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_organizer_display"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_organizer_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_date_label"
        android:id="@+id/event_detail_date_label"
        android:layout_below="@id/event_detail_organizer_label"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_date_display"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_date_label"
        android:layout_alignParentRight="true"
        android:text="@string/event_detail_date_input_text"
        android:background="@android:color/darker_gray"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_time_label"
        android:id="@+id/event_detail_time_label"
        android:layout_below="@id/event_detail_date_label"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_time_display"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_date_label"
        android:layout_alignBaseline="@id/event_detail_time_label"
        android:layout_alignParentRight="true"
        android:text="@string/event_detail_time_input_text"
        android:background="@android:color/darker_gray"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_participants_label"
        android:id="@+id/event_detail_participants_label"
        android:layout_below="@id/event_detail_time_label"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_participants_list"
        android:layout_toRightOf="@id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_participants_label"
        android:layout_alignParentRight="true"
        android:text="@string/event_detail_participants_placeholder_text"
        android:background="@android:color/darker_gray"
        android:paddingLeft="20dp"/>
</RelativeLayout>
</ScrollView>