<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/event_detail_name_label"
    android:id="@+id/event_detail_name_label"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_location_label"
        android:id="@+id/event_detail_location_label"
        android:layout_below="@id/event_detail_name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_distance_label"
        android:id="@+id/event_detail_distance_label"
        android:layout_below="@id/event_detail_location_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_date_label"
        android:id="@+id/event_detail_date_label"
        android:layout_below="@id/event_detail_distance_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_time_label"
        android:id="@+id/event_detail_time_label"
        android:layout_below="@id/event_detail_date_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_organizer_label"
        android:id="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_time_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_participants_label"
        android:id="@+id/event_detail_participants_label"
        android:layout_below="@id/event_detail_organizer_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_name_input"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_alignBaseline="@id/event_detail_name_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_location_input"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_location_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_distance_input"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_distance_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_date_input"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_date_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/event_detail_date_input_text"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_time_input"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_time_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/event_detail_time_input_text"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_organizer_input"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_organizer_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_detail_participants_list"
        android:layout_toRightOf="@+id/event_detail_organizer_label"
        android:layout_below="@id/event_detail_name_input"
        android:layout_alignBaseline="@id/event_detail_participants_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/event_detail_participants_placeholder_text"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>